--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "topgeschenken/php-translation-flysystem-adapter",
+    "name": "php-translation/flysystem-adapter",
     "description": "Adapter for flysystem.",
     "license": "MIT",
     "authors": [
@@ -10,9 +10,9 @@
     ],
     "require": {
         "php": "^7.0",
-        "php-translation/common": "^0.2 || ^1.0",
-        "php-translation/symfony-storage": "^0.3.2 || ^1.0",
-        "symfony/translation": "^3.4 || ^4.0",
+        "php-translation/common": "^1.0",
+        "php-translation/symfony-storage": "^1.0",
+        "symfony/translation": "^3.3 || ^4.0",
         "league/flysystem": "^1.0"
     },
     "require-dev": {
@@ -32,12 +32,5 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-ci": "vendor/bin/phpunit --coverage-text --coverage-clover=build/coverage.xml"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.2-dev"
-        }
     }
 }
