--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": "^7.0",
-        "php-translation/common": "^1.0",
+        "php-translation/common": "^1.0 || ^3.0",
         "php-translation/symfony-storage": "^1.0",
         "symfony/translation": "^3.3 || ^4.0",
         "league/flysystem": "^1.0"
